--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,7 @@
 layout: default
 ---
 <link rel="stylesheet" href="{{ '/assets/css/navi.css?v=' | append: site.github.build_revision | relative_url }}">
-
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
@@ -16,21 +14,9 @@ layout: default
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}</p>
   </header>
-
   <div class="post-content e-content" itemprop="articleBody">
+    <!-- begin content post -->
     {{ content }}
+    <!-- end content post -->
   </div>
-  <!--
-  <div class="PageNav">
-    {% if page.previous.url %}
-      <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-    {% else %}
-    <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
-    {% endif %}
-
-    {% if page.next.url %}
-      <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-    {% endif %}
-  </div>
--->
 </article>
