--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,6 @@
-
-
-    <link rel="stylesheet" href="{{ '/assets/css/paginate-style.css?v=' | append: site.github.build_revision | relative_url }}">
-      <div id="header">
-        <nav>
-          {% if site.show_downloads %}
-            <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-            <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-            <li class="title">DOWNLOADS</li>
-          {% endif %}
-        </nav>
-      </div>
+---
+---
+      {% include navbar.html %}
     <div class="paginate-entry">
       <section class="paginate-entry">
         <!-- begin content default -->
