--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,22 +1,10 @@
 ---
-layout: default
+layout: default-with-head
 ---
 <link rel="stylesheet" href="{{ '/assets/css/navi.css?v=' | append: site.github.build_revision | relative_url }}">
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
-  <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-    <p class="post-meta">
-      <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        {{ page.date | date: date_format }}
-      </time>
-      {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {%- endif -%}</p>
-  </header>
-  <div class="post-content e-content" itemprop="articleBody">
-    <!-- begin content post -->
+<article>
+  <!-- begin content post-with-nav -->
     {{ content }}
-    <!-- end content post -->
-  </div>
+  <!-- end content post-with-nav -->
+  {% include post-pagenav.html %}
 </article>
