content for the home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,5 +2,6 @@
 layout: default-with-head
 ---
 <!-- This loops through the paginated posts -->
+{{ content }}
 {% include paginate-posts.html %}
 {% include paginate-nav.html %}
