--- a/_includes/paginate-posts.html
+++ b/_includes/paginate-posts.html
@@ -4,6 +4,6 @@
     <span class="date">{{ post.date }}</span>
   </p>
   <div class="content">
-    {{ post.content }}
+    {{ post.excerpt }}
   </div>
 {% endfor %}
