--- a/_includes/paginate-nav.html
+++ b/_includes/paginate-nav.html
@@ -1,4 +1,4 @@
-
+<!-- begin paginate-nav -->
 
 <link rel="stylesheet" href="{{ '/assets/css/paginate-style.css?v=' | append: site.github.build_revision | relative_url }}">
 
@@ -27,3 +27,4 @@
   {% endif %}
 </div>
 {% endif %}
+<!-- end paginate-nav -->
