--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
+<!-- begin footer -->
 <div id="footer">
   <hr>
   <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
   <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
 </div>
+<!-- end footer -->
