--- a/_includes/paginate-posts.html
+++ b/_includes/paginate-posts.html
@@ -1,9 +1,11 @@
+<!-- begin paginate-posts.html -->
 {% for post in paginator.posts %}
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
   <p class="author">
-    <span class="date">{{ post.date }}</span>
+    <span class="date">{{ post.date| date: "%B %-d, %Y %I:%M %p %Z"  }}</span>
   </p>
   <div class="content">
     {{ post.excerpt }}
   </div>
 {% endfor %}
+<!-- begin paginate-posts.html -->
