--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -1,11 +1,13 @@
+<!-- begin post-header -->
 <header class="post-header">
   <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
   <p class="post-meta">
     <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
-      {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-      {{ page.date | date: date_format }}
+      {%- assign date_format = site.minima.date_format | default: "%B %-d, %Y %r %Z" -%}
+     {{ page.date | date: "%B %-d, %Y %r %Z" }}
     </time>
     {%- if page.author -%}
       • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
     {%- endif -%}</p>
 </header>
+<!-- end post-header -->
