--- a/_includes/post-pagenav.html
+++ b/_includes/post-pagenav.html
@@ -1,3 +1,4 @@
+<!-- begin pagenav -->
 <div class="PageNav">
   {% if page.previous.url %}
     <a class="prev" href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
@@ -8,3 +9,4 @@
     <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
   {% endif %}
 </div>
+<!-- end pagenav -->
