--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,4 +1,4 @@
-<div id="title">
+<div id="title" style="margin: 0 0 10px 0;">
   <h1>{{ site.title | default: site.github.repository_name }}</h1>
   <p>{{ site.description | default: site.github.project_tagline }}</p>
   <hr>
