--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,22 +1,21 @@
 ---
 layout: default-with-head
 ---
-<!-- begin content archive -->
+<!-- begin default-with-head -->
+<!-- begin content default-with-head -->
 {% for post in paginator.posts %}
   <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
   <p class="author">
-    <span class="date">{{ post.date }}</span>
+      <span class="date">{{ page.date | date: "%B %-d, %Y %r %Z" }}</span>
   </p>
   <div class="content">
-    <!-- begin post.content archive -->
+    <!-- begin post.content default-with-head -->
     {{ post.content }}
-    <!-- end post.content archive -->
+    <!-- end post.content default-with-head -->
   </div>
 {% endfor %}
 
 <!-- Pagination links -->
-
-
 <div class="pagination">
   {% if paginator.previous_page %}
     <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
@@ -30,7 +29,7 @@ layout: default-with-head
     <span class="next ">Next</span>
   {% endif %}
 </div>
-<!-- end content archive -->
+<!-- end content default-with-head -->
 {% if paginator.total_pages > 1 %}
 <div class="pagination">
   {% if paginator.previous_page %}
@@ -56,3 +55,4 @@ layout: default-with-head
   {% endif %}
 </div>
 {% endif %}
+<!-- end default-with-head -->
