--- a/_layouts/post-no-nav.html
+++ b/_layouts/post-no-nav.html
@@ -4,8 +4,8 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
   {%- include 'post-header.html' -%}
   <div class="post-content e-content" itemprop="articleBody">
-    <!-- begin content post -->
+    <!-- begin content post-no-nav -->
     {{ content }}
-    <!-- end content post -->
+    <!-- end content post-no-nav -->
   </div>
 </article>
